# sucuri

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 77f61fbfa071_initial_migration.py  7b2e7e9122e9_.py  b00e9734a022_.py  f6598fcf89f5_.py
models/: enums.py  models.py
scripts/: init.sql
sucuri/: create_tables.py  main.py
sucuri/alembic/: env.py
sucuri/alembic/versions/: 470a64f7a08b_first_migration.py
sucuri/crud/: crud_organization.py  crud_profile.py
sucuri/database/: config.py  dependency.py
sucuri/models/: enums.py  models.py
sucuri/schemas/: schemas.py
sucuri/sucuri_app/models/: models.py
sucuri/sucuri_app/sql_sucuri/: database.py
sucuri/tests/test_views/: test_organization_view.py  test_profile_view.py
sucuri/views/: organization_view.py  profile_view.py
